---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2025-03-08
  Bugfixes:
    - Logistic requests of vehicles will be preserved when vehicle are put back in the player's inventory
    - Fixed equipment shield and energy level not being preserved
    - Fixed a mod crash when placing a vehicle with ghost equipment
  Changes:
    - Let the API handle picking up vehicles
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-02-26
  Changes:
    - Added spidertrons to vehicules found by Quick Ride
    - Players can now double tap the shortcut to swap to a second vehicle
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025.02.24
  Changes:
    - The preference GUI can now be closed by pressing E or escape
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025.02.14
  Changes:
    - Reworked the GUI to be simpler
    - Added an alternative GUI for mod that have a lot
    - It's now possible to have multiple favorites and to blacklist vehicles, fuel or ammo
  Bugfixes:
    - Equipment from vehicles' equipment grid is no longer lost when using the shortcut.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025.02.14
  Bugfixes:
    - Fixed a crash when vehicle were removed between loadings of a save
    - The vehicle creation will now raise the 'script_raised_built' event